# drf-file-upload

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.rst  build_and_deploy.sh  manage.py  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
drf_file_upload/: admin.py  apps.py  cleanup.py  fields.py  filenames.py  models.py  serializers.py  settings.py  urls.py  views.py
drf_file_upload/management/commands/: delete_expired_uploaded_files.py
drf_file_upload/migrations/: 0001_initial.py  0002_authenticateduploadedfile_uuid.py  0003_auto_20210420_2323.py  0004_auto_20220727_1550.py
tests/: models.py  serializers.py  test_settings.py  urls.py  views.py
tests/tests/: base_test.py  factory.py  test_anonymous_upload.py  test_authenticated_upload.py  test_delete_expired_uploaded_files.py  test_it_anonymous_upload.py  test_it_authenticated_upload.py  test_spectacular_schema.py  test_unit_anonymous_upload_serializers.py  test_unit_authenticated_upload_serializers.py  test_uploaded_file_field.py
